# Cog

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: bleeding-edge.yml  nightly.yml
Tests/: emoji.txt  fakefile_100MB.txt  test_json.json
languages/c/: language-configuration.json  syntax.json
languages/cloth/: syntax.json
languages/cpp/: syntax.json
languages/ini/: syntax.json
languages/java/: syntax.json
languages/json/: syntax.json
languages/python/: syntax.json
languages/rust/: syntax.json
settings/: color_scheme.ini  editor_settings.ini
src/: clipboard.rs  document.rs  edit_history.rs  editor.rs  file.rs  file_detector.rs  gutter.rs  main.rs  position.rs  selection.rs  status_bar.rs  syntax_definition.rs  syntax_highlighter.rs  syntax_tests.rs  tab_handler.rs  terminal_session.rs
src/config/: configs.rs
