[package]
name = "cog"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
chardetng = "0.1.17"
crossterm = "0.29.0"
encoding_rs = "0.8.35"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21.3"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
